src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>pi__conversion_object_type__c</fullName>
        <description>The type of object which converted an anonymous visitor into a named prospect (form, form handler, landing page, or video form).</description>
        <label>Pardot Conversion Object Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__created_date__c</fullName>
        <description>The Pardot created date represents the date and time at which the Prospect record was created in Pardot. This will often differ from your Salesforce.com created date.</description>
        <label>Pardot Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pi__first_activity__c</fullName>
        <label>Pardot First Activity</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pi__first_search_term__c</fullName>
        <description>If a Prospects first touch was the result of a search, this field contains the search term.</description>
        <label>Pardot First Referrer Query</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__first_search_type__c</fullName>
        <description>If a Prospects first touch was the result of a search, this field contains the type of search conducted.</description>
        <label>Pardot First Referrer Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__first_touch_url__c</fullName>
        <description>The value of the referrer for the first tracked request made by a Prospect.</description>
        <label>Pardot First Referrer</label>
        <length>65000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>pi__grade__c</fullName>
        <description>The Pardot grade is based on how well a prospect fits your organization&apos;s ideal customer profile. Explicit factors such as company size, industry, job title and more help determine this value. A combination of grade (explicit) and score (implicit) can be used to very effectively optimize the sales team&apos;s time. Grade, like score, is calculated within the Pardot system and cannot be edited in Salesforce.com.</description>
        <label>Pardot Grade</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__last_activity__c</fullName>
        <label>Pardot Last Activity</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pi__notes__c</fullName>
        <label>Pardot Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>pi__pardot_hard_bounced__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Boolean that determines whether contact hard bounced.</description>
        <label>Pardot Hard Bounced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pi__score__c</fullName>
        <description>The Pardot score is based on implicit buying signals a lead demonstrates through his or her activities and responses to your marketing efforts. The higher the score, the more active the lead has been. A combination of score (implicit buying signals) and grade (explicit factors) helps you prioritize your prospects. Score, like grade, is calculated within the Pardot system and cannot be edited in Salesforce.com.</description>
        <label>Pardot Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pi__url__c</fullName>
        <description>This link takes you directly into the relevant prospect&apos;s profile within Pardot. From there you can view his or her complete activity history. This URL is generated within the Pardot system and cannot be edited in Salesforce.com.</description>
        <label>Pardot URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>pi__utm_campaign__c</fullName>
        <label>Google Analytics Campaign</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__utm_content__c</fullName>
        <label>Google Analytics Content</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__utm_medium__c</fullName>
        <label>Google Analytics Medium</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__utm_source__c</fullName>
        <label>Google Analytics Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__utm_term__c</fullName>
        <label>Google Analytics Term</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>qualtrics__Informed_Consent_Date__c</fullName>
        <description>This date is populated when a contact grants Informed Consent via Qualtrics Informed Consent Quick Start Survey</description>
        <label>Informed Consent Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>qualtrics__Informed_Consent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is populated as a result of the Qualtrics Informed Consent Quick Start Survey</description>
        <label>Informed Consent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>qualtrics__Last_Survey_Invitation__c</fullName>
        <label>Last Survey Invitation</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>qualtrics__Last_Survey_Response__c</fullName>
        <label>Last Survey Response</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>qualtrics__Net_Promoter_Score__c</fullName>
        <label>Net Promoter Score</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>ASABoardofDirectors</fullName>
        <columns>FULL_NAME</columns>
        <columns>ASA_Member__c</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ASA_Member__c</field>
            <operation>equals</operation>
            <value>ASA Board of Directors</value>
        </filters>
        <label>ASA Board of Directors</label>
        <sharedTo>
            <role>Executive</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASA_NO_email</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.EMAIL</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>notEqual</operation>
            <value>Contact.College_UniversityPresident,Contact.MarketingVendor</value>
        </filters>
        <label>ASA NO email</label>
    </listViews>
    <listViews>
        <fullName>AdvisoryBoard_d_2</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ASA_Member__c</field>
            <operation>includes</operation>
            <value>Advisory Board</value>
        </filters>
        <label>Advisory Board</label>
    </listViews>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>No_Longer_Here__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Contacts</label>
    </listViews>
    <listViews>
        <fullName>All_Customer_Satisfaction_Customers</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>No_Longer_Here__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Customer Satisfaction Customers</label>
    </listViews>
    <listViews>
        <fullName>All_Holiday_contacts_2015</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.ADDRESS2_STREET</columns>
        <columns>CONTACT.ADDRESS2_CITY</columns>
        <columns>CONTACT.ADDRESS2_STATE</columns>
        <columns>CONTACT.ADDRESS2_ZIP</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>2016 Annual Report Mailing List</label>
    </listViews>
    <listViews>
        <fullName>Ambassador_Students</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.SALT_Ambassador</value>
        </filters>
        <label>Ambassador Students</label>
        <sharedTo>
            <group>ASAProfessionalServices</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BPM_Created_This_Week</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.Employer_Mkt</value>
        </filters>
        <label>BPM Created This Week</label>
        <sharedTo>
            <roleAndSubordinatesInternal>Senior_Management</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Boston_Foundation_Contacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.Foundation</value>
        </filters>
        <filters>
            <field>CONTACT.ADDRESS2_STATE</field>
            <operation>equals</operation>
            <value>MA</value>
        </filters>
        <label>Boston Foundation Contacts</label>
    </listViews>
    <listViews>
        <fullName>CPS_EOC_Boston_Contacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>Elidgable_Report_Support__c</columns>
        <columns>Eligibility__c</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CPS_Advisor__c</columns>
        <columns>Age__c</columns>
        <columns>Gender__c</columns>
        <columns>Is_Student__c</columns>
        <columns>Is_US_citizen__c</columns>
        <columns>Statement_of_Need__c</columns>
        <columns>Career_Goals__c</columns>
        <columns>CONTACT.RECORDTYPE</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Intake_Location__c</field>
            <operation>equals</operation>
            <value>EOC Boston</value>
        </filters>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.CPS_EOC</value>
        </filters>
        <label>CPS EOC Boston Contacts</label>
        <sharedTo>
            <role>MasterLevel</role>
            <role>TopLevel</role>
            <roleAndSubordinatesInternal>CPS_Manager</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CPS_EOC_Brockton_Contacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>Elidgable_Report_Support__c</columns>
        <columns>Eligibility__c</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CPS_Advisor__c</columns>
        <columns>Age__c</columns>
        <columns>Is_Student__c</columns>
        <columns>Is_US_citizen__c</columns>
        <columns>Gender__c</columns>
        <columns>Statement_of_Need__c</columns>
        <columns>Career_Goals__c</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>CONTACT.RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Intake_Location__c</field>
            <operation>equals</operation>
            <value>EOC Brockton</value>
        </filters>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.CPS_EOC</value>
        </filters>
        <label>CPS EOC Brockton Contacts</label>
        <sharedTo>
            <role>MasterLevel</role>
            <role>TopLevel</role>
            <roleAndSubordinatesInternal>CPS_Manager</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CPS_TS_Boston_Contacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>Elidgable_Report_Support__c</columns>
        <columns>Eligibility__c</columns>
        <columns>Student_ID__c</columns>
        <columns>School_Guidance_Counselor__c</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CPS_Advisor__c</columns>
        <columns>Age__c</columns>
        <columns>Gender__c</columns>
        <columns>Parent_Signature_received__c</columns>
        <columns>Other_Programs__c</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>Intake_Date__c</columns>
        <columns>Intake_Date_Time__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Intake_Location__c</field>
            <operation>equals</operation>
            <value>TS Boston</value>
        </filters>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.CPS_TS</value>
        </filters>
        <label>CPS TS Boston Contacts</label>
        <sharedTo>
            <role>MasterLevel</role>
            <role>TopLevel</role>
            <roleAndSubordinatesInternal>CPS_Manager</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CPS_TS_Brockton_Contacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>Elidgable_Report_Support__c</columns>
        <columns>Eligibility__c</columns>
        <columns>CPS_Advisor__c</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>Age__c</columns>
        <columns>Gender__c</columns>
        <columns>Parent_Signature_received__c</columns>
        <columns>Other_Programs__c</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>CONTACT.RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.CPS_TS</value>
        </filters>
        <filters>
            <field>Intake_Location__c</field>
            <operation>equals</operation>
            <value>TS Brockton</value>
        </filters>
        <label>CPS TS Brockton Contacts</label>
        <sharedTo>
            <role>MasterLevel</role>
            <role>TopLevel</role>
            <roleAndSubordinatesInternal>CPS_Manager</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CPS_UB_Brockton_Contacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>Elidgable_Report_Support__c</columns>
        <columns>Eligibility__c</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CPS_Advisor__c</columns>
        <columns>Age__c</columns>
        <columns>Gender__c</columns>
        <columns>Is_US_citizen__c</columns>
        <columns>Student_ID__c</columns>
        <columns>School_Guidance_Counselor__c</columns>
        <columns>CONTACT.RECORDTYPE</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Intake_Location__c</field>
            <operation>equals</operation>
            <value>UB Brockton</value>
        </filters>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.CPS_UB</value>
        </filters>
        <label>CPS UB Brockton Contacts</label>
        <sharedTo>
            <role>MasterLevel</role>
            <role>TopLevel</role>
            <roleAndSubordinatesInternal>CPS_Manager</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Contacts_Created_This_Month</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.Employer_Mkt</value>
        </filters>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>Contacts Created This Month</label>
        <sharedTo>
            <roleAndSubordinatesInternal>EDM_Counselor</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>EDM_Manager</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>ASAEmployees</fullName>
        <active>true</active>
        <label>ASA Employees</label>
    </recordTypes>
    <recordTypes>
        <fullName>CPS_EOC</fullName>
        <active>true</active>
        <label>CPS - EOC</label>
    </recordTypes>
    <recordTypes>
        <fullName>CPS_TS</fullName>
        <active>true</active>
        <label>CPS - TS</label>
    </recordTypes>
    <recordTypes>
        <fullName>CPS_UB</fullName>
        <active>true</active>
        <label>CPS - UB</label>
    </recordTypes>
    <recordTypes>
        <fullName>College_UniversityPresident</fullName>
        <active>true</active>
        <description>College and University Presidents</description>
        <label>College_University President</label>
    </recordTypes>
    <recordTypes>
        <fullName>Employee_Client</fullName>
        <active>true</active>
        <description>Use for the EMPLOYEE contact, not visible to the general public.</description>
        <label>Employee Client</label>
    </recordTypes>
    <recordTypes>
        <fullName>Employer_Mkt</fullName>
        <active>true</active>
        <description>Used for the Counseling Services contacts</description>
        <label>Counseling Services Contact</label>
    </recordTypes>
    <recordTypes>
        <fullName>ExecutivePrivate</fullName>
        <active>true</active>
        <description>Executive Contacts Private from everyone but Marketing and Executive/Admins</description>
        <label>Executive - Private</label>
    </recordTypes>
    <recordTypes>
        <fullName>Foundation</fullName>
        <active>true</active>
        <label>Foundation</label>
    </recordTypes>
    <recordTypes>
        <fullName>Grant_Sublease</fullName>
        <active>true</active>
        <label>Grant/Sublease</label>
    </recordTypes>
    <recordTypes>
        <fullName>LegalVendor</fullName>
        <active>true</active>
        <description>Contacts for legal contracts and Vendor</description>
        <label>Legal Vendor</label>
    </recordTypes>
    <recordTypes>
        <fullName>LegislatorPrivateExecMarketing</fullName>
        <active>true</active>
        <description>Use this record for contacts that only Marketing and/or Executives should see (Legislators)</description>
        <label>Legislator/Private Exec &amp; Marketing</label>
    </recordTypes>
    <recordTypes>
        <fullName>Lender_Servicer</fullName>
        <active>true</active>
        <description>Contact Record for Lender or Servicer Client</description>
        <label>Lender_Servicer</label>
    </recordTypes>
    <recordTypes>
        <fullName>MarketingVendor</fullName>
        <active>true</active>
        <description>Vendors that ASA does business with or ASA Empoyee as Business Sponsor</description>
        <label>Marketing Vendor</label>
    </recordTypes>
    <recordTypes>
        <fullName>SALT_Ambassador</fullName>
        <active>true</active>
        <label>SALT Ambassador</label>
    </recordTypes>
    <recordTypes>
        <fullName>SALT_Member</fullName>
        <active>true</active>
        <description>This record type is being used as the Pilot Program for Member records</description>
        <label>SALT Member</label>
    </recordTypes>
    <recordTypes>
        <fullName>SWO_Government</fullName>
        <active>true</active>
        <description>SWO Government Channel - FEDM (Federal Education Debt Management)</description>
        <label>SWO Government</label>
    </recordTypes>
    <recordTypes>
        <fullName>SchoolLenderServicer</fullName>
        <active>true</active>
        <description>External Industry Contact</description>
        <label>School/Lender/Servicer</label>
    </recordTypes>
    <recordTypes>
        <fullName>Strategic_Partnership</fullName>
        <active>true</active>
        <description>This record type is used for contacts that are at Prospective/Active Strategic Partners</description>
        <label>Strategic Partnership</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>ASA_BPM_Service_Agent_not_Edit_CPS</fullName>
        <active>true</active>
        <description>ASA BPM Service Agent should not be able to edit the CPS contact record.</description>
        <errorConditionFormula>AND(
  not(isnew()),
  $Profile.Name = &apos;ASA - Counseling Services&apos;,
  OR(
    RecordType.Name = &apos;CPS - EOC&apos;,
    RecordType.Name = &apos;CPS - TS&apos;,
    RecordType.Name = &apos;CPS - UB&apos;
  )
)</errorConditionFormula>
        <errorMessage>ASA BPM Service Agent does not have Edit Access of this record</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Ambassadors_Cannot_have_Account</fullName>
        <active>true</active>
        <description>S-54-16: Prevent Ambassador record type from having value for Account. Workaround for http://help.salesforce.com/HTViewSolution?id=000212491</description>
        <errorConditionFormula>AND(OR($RecordType.Name = &quot;SALT Ambassador&quot;, $RecordType.Name = &quot;SALT Member&quot;),
NOT(isblank( AccountId )))</errorConditionFormula>
        <errorDisplayField>AccountId</errorDisplayField>
        <errorMessage>SALT Ambassadors or Members cannot use this field</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CPS_If_Is_US_Citizen_TRUE</fullName>
        <active>true</active>
        <description>Resident Alien Id must be blank if US Citizen = true.</description>
        <errorConditionFormula>AND(Resident_Alien_Resident_ID__c &lt;&gt; &quot;&quot;,
Is_US_citizen__c = TRUE)</errorConditionFormula>
        <errorMessage>Resident Alien ID must be blank if Is US Citizen is Checked.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Communications_Requirements</fullName>
        <active>false</active>
        <description>This rule checks to be sure that the Prospective/Former Client Comms field is not accessible if the Foreign School Comms &amp;/or F.D.O. &amp;/or Lend Serve fields are checked.</description>
        <errorConditionFormula>AND (OR(
International_School_Communication__c  = true,  Lend_Serv__c = true,

or(
ISPICKVAL(Communications__c, &quot;School&quot;),
ISPICKVAL(Communications__c, &quot;Lender/Servicer&quot;),
ISPICKVAL(Communications__c, &quot;MDHE&quot;)
)

),  Prospective_Former_Customer__c  &lt;&gt; false)</errorConditionFormula>
        <errorMessage>This field cannot be active because the contact record is currently receiving communications from us.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Father_College_Graduation_Fields</fullName>
        <active>false</active>
        <errorConditionFormula>ISPICKVAL( Is_Father_College_graduate__c , &apos;Yes&apos;) &amp;&amp; ISBLANK( Father_s_college__c )</errorConditionFormula>
        <errorDisplayField>Father_s_college__c</errorDisplayField>
        <errorMessage>Please fill Father&apos;s College name if he is College graduate.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FirstName_Cannot_be_Blank_on_CPS_Contact</fullName>
        <active>true</active>
        <description>The First Name on a CPS Contact Record for EOC, TS or UB cannot be blank.</description>
        <errorConditionFormula>AND( 
OR( RecordType.Name =&quot;CPS - EOC&quot;, 
RecordType.Name =&quot;CPS - TS&quot;, 
RecordType.Name =&quot;CPS - UB&quot;), 
ISBLANK( FirstName ))</errorConditionFormula>
        <errorMessage>First Name cannot be left blank.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>First_Name_on_CPS_Contact_cannot_be_blan</fullName>
        <active>true</active>
        <description>The First Name on a CPS Contact Record for EOC, TS or UB cannot be blank.</description>
        <errorConditionFormula>AND( 
OR( RecordType.Name =&quot;CPS - EOC&quot;, 
RecordType.Name =&quot;CPS - TS&quot;, 
RecordType.Name =&quot;CPS - UB&quot;), 
ISBLANK( FirstName ))</errorConditionFormula>
        <errorMessage>First Name cannot be left blank.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Mother_College_Graduation_Fields</fullName>
        <active>false</active>
        <errorConditionFormula>ISPICKVAL(Is_Mother_College_graduate__c , &apos;Yes&apos;) &amp;&amp;  ISBLANK(Mother_s_college__c)</errorConditionFormula>
        <errorDisplayField>Mother_s_college__c</errorDisplayField>
        <errorMessage>Please fill Mother&apos;s College name if she is College graduate.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Other_Learned_about_Validation</fullName>
        <active>false</active>
        <errorConditionFormula>ISPICKVAL(Learned_about_program__c, &apos;Other&apos;) &amp;&amp; ISBLANK(Other_Learned_about_program__c)</errorConditionFormula>
        <errorDisplayField>Other_Learned_about_program__c</errorDisplayField>
        <errorMessage>Please enter Learned about source</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Other_Statement_of_need_validation</fullName>
        <active>false</active>
        <errorConditionFormula>INCLUDES(Statement_of_Need__c,&apos;Other&apos;) &amp;&amp; ISBLANK(Other_Programs__c)</errorConditionFormula>
        <errorDisplayField>Other_Programs__c</errorDisplayField>
        <errorMessage>Please enter Statement of need.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Tutoring_Topic_on_Statement_validation</fullName>
        <active>false</active>
        <errorConditionFormula>INCLUDES(Statement_of_Need__c,&apos;Tutoring in&apos;) &amp;&amp; ISBLANK(Tutoring_Topic__c)</errorConditionFormula>
        <errorDisplayField>Tutoring_Topic__c</errorDisplayField>
        <errorMessage>Please enter Tutoring Topic</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Zip_Code_Invalid</fullName>
        <active>true</active>
        <description>Validates that zip is either 5 digits or 5 digits with 4 digit extension.</description>
        <errorConditionFormula>AND(
NOT(ISBLANK(MailingPostalCode)),  
NOT(REGEX(MailingPostalCode , &quot;\\d{5}(-\\d{4})?&quot;))
)</errorConditionFormula>
        <errorDisplayField>MailingPostalCode</errorDisplayField>
        <errorMessage>Mailing Zip/Postal Code must be in the correct format: nnnnn or nnnnn-nnnn.</errorMessage>
    </validationRules>
</CustomObject>